--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_sms: ^2.3.3
   flutter_contacts: ^1.1.5+1
   carousel_slider: ^4.1.1
+  card_swiper: ^2.0.4
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
