--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   google_maps_flutter_android: ^2.3.3
   google_maps_flutter: ^2.2.1
+  full_screen_image_null_safe: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
+  assets:
+    - assets/
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
